# browser-2d-renderer-benchmark

./: .gitignore  Cargo.toml  README.md  browser-2d-renderer-benchmark-332d5e4cb65c33ac.js  index.html  pixijs_webgpu_demo-8704cc2efa71ed41.js  pixijs_wegbl_demo-fffe29b9efa21b0b.js  winit-tiny-skia-e415b599c07772f0.js
js/: canvas_api_demo.js  canvaskit_demo.js  pixijs_demo.js
src/: bouncing_rect.rs  js_bindings.rs  lib.rs  main.rs  tiny_skia_demo.rs  vello_demo.rs
src/tiny_skia_demo/: app.rs  bouncing_rect.rs
src/vello_demo/: app.rs  bouncing_rect.rs
